# quad-edge

./: Cargo.toml  README.md  design-doc.md
assets/shaders/: custom_material.wgsl  line_mesh.wgsl  two_interp.wgsl
src/: delaunay_voronoi.rs  geometry.rs  gui.rs  lib.rs  main.rs  mesh.rs  quad.rs  quadedge.rs  simple.rs  topological.rs
src/gui/: arrow_instance.rs  arrow_shapes.rs  default_arrows.rs  line_mesh.rs  mesh_draw.rs  mod.rs  mouse.rs  shapes.rs
src/gui/animate_mesh/: algorithm_animate.rs  mod.rs
src/mesh/: dual.rs  mod.rs  primal.rs  quad.rs
