[package]
name = "quad-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gui = ["bevy"]

[dependencies]
bevy_arrow = { path = "../bevy_arrow" }
cgmath = "0.18.0"
bevy = { version="0.7.0", optional = true, features = ["dynamic"] }
# bevy = { path="../bevy", optional = true, features = ["dynamic"] }
# bevy_egui = "0.12"