[package]
name = "quad-edge"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui"]
gui = ["bevy"]

[dependencies]
bevy_arrow = { path = "../bevy_arrow" }
# bevy_arrow = { git = "https://github.com/computemachines/bevy_arrow.git" }
cgmath = "0.18.0"
log = "0.4.17"
#bevy-inspector-egui = "0.10.0"
rand = "0.8.5"
itertools = "0.10.3"
bevy = { version="0.7.0", optional = true, features = ["dynamic"] }
# bevy = { version="0.7.0", optional=true }
bevy_egui = "0.13"
